--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,12 +1,32 @@
 {
 
     "version": "0.2.0",
-    "configurations": [],
-    "setupCommands": [
-        {
-          "description": "Print polymorphic objects according to dynamic type",
-          "text": "set print object on"
-        }
-    ]
+    "configurations": [
+    {
+      "name": "(gdb) Launch",
+      "type": "cppdbg",
+      "request": "launch",
+      "program": "${workspaceFolder}/List_compile_check.exe",
+      "args": [],
+      "stopAtEntry": false,
+      "cwd": "${fileDirname}",
+      "environment": [],
+      "externalConsole": false,
+      "MIMode": "gdb",
+      "setupCommands": [
+          {
+              "description": "Enable pretty-printing for gdb",
+              "text": "-enable-pretty-printing",
+              "ignoreFailures": true
+          },
+          {
+              "description": "Set Disassembly Flavor to Intel",
+              "text": "-gdb-set disassembly-flavor intel",
+              "ignoreFailures": true
+          }
+      ]
+    }
+    ],
+
     
 }
